    - add slideshow support based on webkit
    - call percent() JS method on the webkit view
  * check-new-release:
    - use exit codes if run with --quiet otherwise only print
      (LP: #494499)
  * DistUpgrade/DistUpgradeConfigParser.py:
    - fix crash in _interpolate (LP: #500705)
  * UpdateManager/Core/MetaRelease.py:
    - do not crash on stat failure (LP: #496144)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Dec 2009 12:47:55 +0100

update-manager (1:0.131.2) lucid; urgency=low

  * data/release-upgrades:
    - default to lts->lts upgrade prompts for lucid
  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
    - allow virtio for block devices when the virtio option
      is given in the config
  * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
    - cleanup PostUpgradePurge and add "linux-restricted-modules-common"
    - cleanup ForcedObsoletes rules
    - update kernel removal rules and BaseNames
    - fix belocs-locales-bin upgrade issue (LP: #474543)
  * DistUpgrade/DistUpgradeController.py:
    - check forh reboot-required files in partial upgrade mode, 
      update-notifier is no longer doing that by default
      (foundations-lucid-restart-required-dialog spec)
  * DistUpgrade/DistUpgrade.ui:
    - add a bunch of missing "<property name="orientation">" 
    - improve restart-required dialog

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Dec 2009 10:59:51 +0100

update-manager (1:0.131.1) lucid; urgency=low

  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - use getWithDefault() for "NonInteractive","ForceOverwrite"
      (thanks to Free Ekanayaka)
  * UpdateManager/Core/MyCache.py:
    - detect dirty dpkg journal and enter recovery mode in this
      case (thanks to Maco for reporting)
  * DistUpgrade/DistUpgrade.cfg:
    - remove kvm-source on upgrade
  * debian/update-manager-core.links:
    - use "91-release-upgrade" instead of "91-release_upgrade" to
      make run-parts happy
  * fix FTBFS
