@@ -16,6 +16,8 @@ update-manager (1:0.131.3) UNRELEASED; urgency=low
     - fix crash in _interpolate (LP: #500705)
   * UpdateManager/Core/MetaRelease.py:
     - do not crash on stat failure (LP: #496144)
+  * UpdateManager/Core/MyCache.py:
+    - do not crash if the lock can not be released (LP: #410574)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Dec 2009 12:47:55 +0100
 
